--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -157,7 +157,7 @@ en:
         username: Username
         name: Name
         auth: AUTH
-        provider_uid: PROVIDER UID
+        provider_uid: "PROVIDER: UID"
         last_login_at: Last login at
         last_login_from: Last login from
         admin: Admin
