--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -189,7 +189,7 @@ ch_be:
         username: Benutzernamä
         name: Namä
         auth: AUTH
-        provider_uid: PROVIDER UID
+        provider_uid: "PROVIDER: UID"
         last_login_at: Letschti Ameudig am
         last_login_from: Letschti Ameudig vo
         admin: Admin
