--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -39,6 +39,7 @@ ch_be:
   move: Bewegä
   here: hiä
   new: Nöi
+  back: Zrügg
   save: Spichere
   close: Schliesse
   hi_user: "Hoi, "
@@ -187,7 +188,8 @@ ch_be:
         title: Cryptopus Benutzer
         username: Benutzernamä
         name: Namä
-        provider_uid: PROVIDER UID
+        auth: AUTH
+        provider_uid: "PROVIDER: UID"
         last_login_at: Letschti Ameudig am
         last_login_from: Letschti Ameudig vo
         admin: Admin
@@ -349,6 +351,10 @@ ch_be:
           toggle:
             empowered: "%{username} het ab iz Admin-Rächt"
             disempowered: "Am Benutzer %{username} si d Admin-Rächt entzoge worde"
+          destroy:
+            own_user: "Dr eigend Benutzer cha nid glöscht werde"
+            success: "Benutzer isch erfolgrich glöscht worde"
+          no_access: "Zugriff verweigert"
       api-users:
         create: "%{username} isch ersteut worde"
         update:
