--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -42,6 +42,7 @@ de:
   move: Bewegen"
   here: Hier
   new: Neu
+  back: Zurück
   save: Speichern
   close: Schliessen
   hi_user: "Hi, "
@@ -150,7 +151,8 @@ de:
         title: Cryptopus Benutzer
         username: Benutzername
         name: Name
-        provider_uid: PROVIDER UID
+        auth: AUTH
+        provider_uid: "PROVIDER: UID"
         last_login_at: Letzte Anmeldung am
         last_login_from: Letzte Anmeldung von
         admin: Admin
@@ -324,6 +326,7 @@ de:
             disempowered: "Dem Benutzer %{username} wurden die Admin-Rechte entzogen"
           destroy:
             own_user: "Eigener Benutzer kann nicht gelöscht werden"
+            success: "Benutzer wurde erfolgreich gelöscht"
           no_access: "Zugriff verweigert"
         settings:
           test_ldap_connection:
