--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -41,6 +41,7 @@ en:
   team: Team
   move: Move
   new: New
+  back: Back
   save: Save
   close: Close
   hi_user: "Hi,"
@@ -155,7 +156,8 @@ en:
         title: Cryptopus users
         username: Username
         name: Name
-        provider_uid: PROVIDER UID
+        auth: AUTH
+        provider_uid: "PROVIDER: UID"
         last_login_at: Last login at
         last_login_from: Last login from
         admin: Admin
@@ -324,7 +326,7 @@ en:
             admin: "Updated User is now an admin"
           destroy:
             own_user: "You can't delete yourself"
-            success: "Deleted user %{username}"
+            success: "User succefully deleted"
           no_access: "Access denied"
         settings:
           test_ldap_connection:
