--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -154,7 +154,7 @@ en:
         reset_password: Reset password
         warning: By resetting the password, the user loses access to all his private teams. All teams, where he is the only member will be deleted
       index:
-        title: Cryptopus users
+        title: Users
         username: Username
         name: Name
         auth: AUTH
