--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -28,6 +28,7 @@ ch_be:
   settings: Istellige
   recrypt_requests: Recrypt Afragä
   users: Benutzer
+  profile_title: Profiu
   change_password: Passwort wächslä
   last_login_date_and_from: "Ds letschtä Login isch am %{last_login_at} gsi vo %{last_login_from}"
   last_login_date_and_from_country: "Ds letschtä Login isch am %{last_login_at} gsi vo %{last_login_from} (%{last_login_country})"
