--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -32,6 +32,7 @@ de:
   recrypt_requests: Recrypt Anfragen
   users: Benutzer
   user: Benutzer
+  profile_title: Profil
   change_password: Passwort wechseln
   last_login_date_and_from: "Das letzte Login war am %{last_login_at} von %{last_login_from}"
   last_login_date_and_from_country: "Das letzte Login war am %{last_login_at} von %{last_login_from} (%{last_login_country})"
