--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -32,6 +32,7 @@ fr:
   recrypt_requests: Demandes de re crypt
   users: Utilisateur
   user: Utilisateur
+  profile_title: Profilé
   change_password: Changer le mot de passe
   last_login_date_and_from: "La dernière connexion était le %{last_login_at} de %{last_login_from}"
   last_login_date_and_from_country: "La dernière connexion était le %{last_login_at} de %{last_login_from} (%{last_login_country})"
