--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -156,7 +156,8 @@ ch_be:
           specify_range_of_ips: Zum ä Spannwiiti z definiere chane IP-Adrässe mit de Subnetzmaske ihgäh wärde
           range_between: Ds entspricht dr Spannwiiti zwösche
           and: u
-        IPv6_allowed: IPv6 isch erloubt u cha wie fougt ihgäh wärde
+        ipv6_allowed: IPv6 isch erloubt u cha wie fougt ihgäh wärde
+        geo_ip_disabled: Source IP Filter isch deaktiviert. Bitte installier d GeoIP DB
     recryptrequests:
       index:
         title: Entschlüsseligs Afrage
