--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -357,6 +357,7 @@ fr:
           renew: "%{username} a été renouvelé, nouveau jeton: %{token}"
         ccli_login:
           copied: CCLI Login commande a été copiée
+          tooltip: CCLI Login
       members:
         added: Membre de l'équipe a été enlevé avec succès
         removed: Membre de l'équipe a été ajouté avec succès
