--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -51,6 +51,7 @@ de:
   select_team: Wählen Sie bitte ein Team aus oder nutzen Sie die Suche
   role: Rolle
   empty: leer
+  slogan: Der Ort für Passwörter
 
   i18n:
     language:
