Add a new String non, add the Translations in EN/DE/DE_BE/FR in the translations Files, add a Test

--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -79,6 +79,7 @@ en:
       folder_placeholder: Select a Folder
       password_strength: Password Strength
       password_strengths:
+        non: There is no password defined
         weak: Weak
         fair: Fair
         good: Good
