--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -62,7 +62,7 @@ fr:
       no_results_found: Aucun résultat trouvé
       type_to_search: Appuyez pour rechercher...
 
-  accounts:
+  encryptables:
     title: Comptes
     index_menu:
       create: Créer compte
@@ -156,7 +156,7 @@ fr:
         title: Teams
         teamname: Nom de l'équipe
         num_folders: Nombre de dossiers
-        num_accounts: Nombre de comptes
+        num_encryptables: Nombre de comptes
         members: Membres
     user_roles:
       user: Utilisateur
@@ -175,7 +175,7 @@ fr:
     show:
       move: Déplacer compte à un autre dossier
       title: "Comptes du dossier %{folder_name} de l'équipe %{team_name}"
-    no_accounts: Pas de comptes
+    no_encryptables: Pas de comptes
     tooltips:
       delete: Supprimer le dossier
       edit: Modifier le dossier
@@ -361,7 +361,7 @@ fr:
         ldap_connection:
           failed: Aucunt serveur LDAP configuré n'a pu être atteint.
 
-    accounts:
+    encryptables:
       created: Compte créé avec succès.
       updated: Compte modifiée avec succès.
       deleted: Compte a été supprimé.
