--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -111,7 +111,7 @@ ch_be:
       folder_placeholder: Wähl ä Ordner us
       password_strength: Passwort Sterchi
       password_strengths:
-        non: Es isch kes Passwort gsetzt
+        none: Es isch kes Passwort gsetzt
         weak: Schwach
         fair: Agmässe
         good: Guet
