Bug 563 translation error flash message (#578)
* Fix bug with translation error when copying password or username

* Renamed accounts to encryptables

* Renamed account to encryptables

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -61,15 +61,15 @@ de:
       no_results_found: keine Resultate gefunden
       type_to_search: Tippen um zu suchen...
 
-  accounts:
-    title: Accounts
+  encryptables:
+    title: Encryptables
     index_menu:
-      create: Account erstellen
+      create: Encryptable erstellen
       folder: Gruppen
     show_menu:
       add_attachment: Anhang hinzufügen
     edit:
-      title: Account editieren
+      title: Encryptable editieren
       random_password: Zufälliges Passwort
       edit_password_placeholder: Klicken oder fokusieren für Eingabe ...
       team_placeholder: Wählen Sie ein Team aus
@@ -81,7 +81,7 @@ de:
         good: Gut
         strong: Stark
     show:
-      account: Account
+      encryptable: Encryptable
       last_change: "Letzte Änderung vor %{time_ago}"
       attachments: Anhänge
       file: Datei
@@ -172,7 +172,7 @@ de:
         title: Teams
         teamname: Teamname
         num_folders: Anzahl Ordner
-        num_accounts: Anzahl Accounts
+        num_encryptables: Anzahl Encryptables
         members: Mitglieder
     user_roles:
       user: Benutzer
@@ -190,8 +190,8 @@ de:
       title: Ordner erstellen
     show:
       move: Account zu einem anderen Ordner verschieben
-      title: "Accounts des Ordners %{folder_name} des Teams %{team_name}"
-    no_accounts: Keine Accounts
+      title: "Encryptables des Ordners %{folder_name} des Teams %{team_name}"
+    no_encryptables: Keine Encryptables
     tooltips:
       delete: Ordner löschen
       edit: Ordner bearbeiten
@@ -383,7 +383,7 @@ de:
         ldap_connection:
           failed: Kein konfigurierter Ldap-Server konnte erreicht werden.
 
-    accounts:
+    encryptables:
       created: Der neue Account wurde erfolgreich erstellt.
       updated: Der Account wurde erfolgreich aktualisiert.
       deleted: Der Account wurde erfolgreich gelöscht.
