Feature/157 change dialog if pw is empty (#576)
* Add a new String non, add the Translations in EN/DE/DE_BE/FR in the translations Files, add a Test

* change a tipo, from apas to a pas

* Edit test with non

* Edit test with non

* Add Test for FR

* Change the Source pfad from the Logo, because it had an old pfad.

* change typo von non to none

* make that it don't sow passwort Stength : if there is no Pw and delete Test with french

* change the typo from non to none

* add a shift that I deletet.

--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -111,6 +111,7 @@ ch_be:
       folder_placeholder: Wähl ä Ordner us
       password_strength: Passwort Sterchi
       password_strengths:
+        none: Es isch kes Passwort gsetzt
         weak: Schwach
         fair: Agmässe
         good: Guet
