--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -81,6 +81,7 @@ fr:
       folder_placeholder: Choisissez un dossier
       password_strength: Fiabilité du mot de passe
       password_strengths:
+        none: Il n'a pas un mot de passe
         weak: Faible
         fair: Approprié
         good: Bien
