--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -32,6 +32,7 @@ en:
   recrypt_requests: Recrypt requests
   users: Users
   user: User
+  log: Log
   profile_title: Profile
   change_password: Change password
   last_login_date_and_from: "The last login was on %{last_login_at} from %{last_login_from}"
