Continued frontend implementation for personal log. Refresh on /log doesnt work and paper trail feature aren't included yet.

--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -32,7 +32,7 @@ en:
   recrypt_requests: Recrypt requests
   users: Users
   user: User
-  log: Log
+  log_title: Log
   profile_title: Profile
   change_password: Change password
   last_login_date_and_from: "The last login was on %{last_login_at} from %{last_login_from}"
@@ -324,6 +324,12 @@ en:
       delete:
         title: Remove Api-User
         content: "Delete Api-User %{username}?"
+  
+  log:
+    info: Personal activity log
+    action: Action
+    date: Date
+    where: Change
 
   flashes:
     api:
