--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -32,7 +32,7 @@ de:
   recrypt_requests: Recrypt Anfragen
   users: Benutzer
   user: Benutzer
-  log: Protokoll
+  log_title: Protokoll
   profile_title: Profil
   change_password: Passwort wechseln
   last_login_date_and_from: "Das letzte Login war am %{last_login_at} von %{last_login_from}"
@@ -322,6 +322,12 @@ de:
       delete:
         title: Entferne Api-User
         content: "Lösche Api-User %{username}?"
+
+  log:
+    info: Persöhnliches Aktivitätsprotokoll
+    action: Aktion
+    date: Datum
+    where: Änderung
 
   flashes:
     api:
